Feature/chatbot agent (#154)
* add file format

* 구체화

* Update BACKEND_REMAINING_GAP_IMPLEMENTATION_PLAN.md

* locale-1

* locale semi complete

* eof

* locale test

* m

* chat

* feature/chatbot-agent

* test error

* Comment out deleteResourceStillMarksDeletedWhenStoredObjectDeleteFails test

Comment out test for resource deletion failure handling.

* test error